--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "4      PT  1596287707  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,18 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34ad4825759148c78d2706706623a9be",
+       "model_id": "40375b60b9744fbc9590806c47a6d1f3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -227,7 +236,6 @@
     "                                 point_radius = 3)\n",
     "\n",
     "fig.add_layer(heat_layer)\n",
-    "\n",
     "fig"
    ]
   },
